# SDL_ENGINE

./: CMakeLists.txt  build.sh  makefile
include/: global.h  io.h  render.h  render_internal.h  types.h
shaders/: default.vert
src/: global.c  global.h  io.c  main.c  render.c  render_init.c  render_util.c
src/engine/: global.h  util.h
src/engine/io/: io.c
src/engine/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
src/input/: input.c  input.h
src/io/: io.c  io.h
src/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
src/time/: time.c  time.h
